--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
                             <small>06/05/2023</small>
                             <small><b>Enlace:</b></small>
                             <small class="social-media">
-                                <a href="https://github.com/tibothrondon/portafolio/tree/gh-pages/CV" target="_blank" rel="noopener">
+                                <a href="https://github.com/tibothrondon/portafolio" target="_blank" rel="noopener">
                                     <i class="fa-brands fa-square-github fa-xl" style="color: #006d8f;"></i>
                                 </a>
-                                <a href="https://tibothrondon.github.io/cv" target="_blank" rel="noopener">
+                                <a href="https://tibothrondon.github.io/portafolio/index.html" target="_blank" rel="noopener">
                                     <i class="fa-solid fa-globe fa-lg" style="color: #008cb4;"></i>
                                 </a>
                                 
