--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </p>
                     
                 <div class="text-center text-lg-left">
-                    <a href="assets/CVTiboth.pdf" class="btn" target="_blank" rel="noopener">DESCARGA MI CV</a>
+                    <a href="assets/Cv-Henry.pdf" class="btn" target="_blank" rel="noopener">DESCARGA MI CV</a>
                 </div>
             </article>
             <article>
